src/objects/inscor__Work_Order_Quote_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__BOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM</label>
        <referenceTo>inscor__BOM__c</referenceTo>
        <relationshipLabel>Work Order Quote Lines</relationshipLabel>
        <relationshipName>Work_Order_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Output_Type__c</fullName>
        <inlineHelpText>Detail Rollup will roll up Prices and display at the Task line while Itemized will show the individual prices for BOM/Labor/Misc.</inlineHelpText>
        <label>Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Output_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Pricing_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Template</label>
        <referenceTo>inscor__Pricing_Template__c</referenceTo>
        <relationshipLabel>Work Order Quote Lines</relationshipLabel>
        <relationshipName>Work_Order_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quoted_Amount__c</fullName>
        <label>Quoted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Task_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task ID</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Work Order Quote Lines</relationshipLabel>
        <relationshipName>Work_Order_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Quote__c</fullName>
        <label>Work Order Quote</label>
        <referenceTo>inscor__Work_Order_Quote__c</referenceTo>
        <relationshipLabel>Work Order Quote Lines</relationshipLabel>
        <relationshipName>Work_Order_Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task_Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Task Skill</label>
        <referenceTo>inscor__Work_Order_Task_Skill__c</referenceTo>
        <relationshipLabel>Work Order Quote Lines</relationshipLabel>
        <relationshipName>Work_Order_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Quote Line</label>
    <nameField>
        <displayFormat>WQID-{0}</displayFormat>
        <label>Quote Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>